# yaal

./: .appveyor.yml  .cvsignore  .gitignore  .gitlab-ci.yml  .travis.yml  BSDmakefile  CMakeLists.txt  GNUmakefile  LICENSE.md  Makefile.in  Makefile.mk.in  README.md  acinclude.m4  config.h.in  configure.ac  configure.js  make.ps1  makefile  msvcxx.mk  stdhapirc.in  yaal.pc.in  yaalrc.in
_aux/: CMakeLists.txt  Findyaal.cmake  Makefile.subdir  aclib.m4  clean-lib.sh  client-config.hxx.cmake  client-configure.m4  cmake-client-config.hxx  cmake-config.hxx  cmake-getdate.cxx  cmakelib.cmake  commit-id  common-basic.mk  common-common-targets.mk  common-flags.mk  common-func.mk  common-implicit-compile.mk  common-int-libs.mk  common-paths.mk  common-prepare-target.mk  common-target-default.mk  conf.vim  config.hxx.cmake  configure.mk.in  cppcheck-suppressions.list  cppcheck.supp  cross-compiler.csh  cross-compiler.sh  doxygenrc  dropprivs.c  exclude  flint.lnt  gdb-pretty-printer.py  gen-keys  gen-keys.cmd  guess-make  guess_make  help-to-asciidoc  helper.hxx  inc-helper-post.mk  (+21 more)
_aux/centos/: Makefile  yaal.spec
_aux/cmake/: FindYaal.cmake  client-config.hxx  common.cmake  config.hxx  env.cmake  lib.cmake  packages.cmake  types.cmake  yaal.cmake
_aux/darwin/: Makefile  Portfile.in
_aux/debian/: Makefile  README  docs  dropprivs.c  rules  shlibs.local  yaal-dev.dirs  yaal-doc.doc-base
_aux/debian/source/: options
_aux/freebsd/: Makefile  pkg-plist.begin  pkg-plist.end
_aux/freebsd/yaal/: Makefile
_aux/mk/: 0_paths.mk  0_sanity.mk  10_basic.mk  1_basic.mk  20_term.mk  2_term.mk  30_suffix.mk  3_suffix.mk  40_commit-id.mk  4_wrapper.mk  5_flags.mk  60_flags.mk  6_int-libs.mk  6_item-paths.mk  70_int-libs.mk  7_flags-post.mk  7_func.mk  80_func.mk  80_func_client.mk  8_int-libs.mk  8_prepare-target.mk  90_common-targets.mk  90_prepare-target.mk  9_common-targets.mk  9_func.mk  BSDmakefile  GNUmakefile  a0_common-targets.mk  a0_target-default.mk  a_prepare-target.mk  b0_target-tools.mk  b_common-targets.mk  b_implicit-compile.mk  c0_implicit-compile.mk  c_filenames.mk  c_target-default.mk  d_implicit-compile.mk  d_target-tags.mk  d_target-tools.mk  e0_target-tools.mk  (+7 more)
_aux/msvcxx/: cleanup.hxx  client-fix.hxx  cmath  crit.hxx  csignal  ctime  curses.h  cxxabi.h  dirent.h  dlfcn.h  emu_fork.cxx  emu_ioctl.cxx  emu_pwd.cxx  emu_pwd.hxx  emu_signals.cxx  emu_signals.hxx  emu_socket.cxx  emu_socket.hxx  emu_termios.cxx  emu_unistd.cxx  emu_unistd.hxx  errno.hxx  exclude.sym  execinfo.h  fcntl.h  fix.hxx  grp.h  iconv.h  main.cxx  msio.cxx  msio.hxx  msvcxx.hxx  poll.h  pwd.h  stdint.h  synchronizedqueue.hxx  synchronizedunorderedset.hxx  termios.h  unistd.h
_aux/msvcxx/openssl/: rsa.h
_aux/msvcxx/sys/: cdefs.h  ioctl.h  mman.h  resource.h  socket.h  stat.h  statvfs.h  time.h  wait.h
_aux/patches/: solaris.mk
_aux/solaris/: GNUmakefile  Makefile  solaris.mk
aux/: Makefile.subdir  common-basic.mk  common-common-targets.mk  common-filenames.mk  common-flags-post.mk  common-flags.mk  common-func.mk  common-implicit-compile.mk  common-int-libs.mk  common-prepare-target.mk  common-suffix.mk  common-target-tags.mk  common-term.mk  common-wrapper.mk  conf.vim  doxygenrc  flint.lnt  inc-helper-post.mk  inc-helper-pre.mk  mkcache  msh  shellrc  shellrc.csh  stats
dbwrapper/: db_driver.hxx  db_driver_loader.c  db_driver_loader.cxx  db_driver_loader.h  db_driver_loader.hxx  dbwrapper.c  dbwrapper.cxx  dbwrapper.h  dbwrapper.hxx  firebird_driver.cxx  hcruddescriptor.cxx  hcruddescriptor.hxx  hdatabase.c  hdatabase.cxx  hdatabase.h  hdatabase.hxx  hquery.cxx  hquery.hxx  hrecordset.c  hrecordset.cxx  hrecordset.h  hrecordset.hxx  hsqldescriptor.cxx  hsqldescriptor.hxx  mysql_driver.c  mysql_driver.cxx  null_driver.c  null_driver.cxx  oracle_driver.c  oracle_driver.cxx  postgresql_driver.c  postgresql_driver.cxx  sqlite3_driver.c  sqlite3_driver.cxx  sqlite_driver.c  sqlite_driver.cxx
debian/: README.source  changelog  control  copyright  docs  dropprivs.c  yaal-dev.install  yaal.install
doc/: COPYRIGHT  INSTALL  PROGRAMMER.READ.ME  READ.ME.FIRST.OR.DIE  doxygen.css  main.xml
hconsole/: .vimrc  ansi.cxx  ansi.hxx  console.c  console.cxx  console.h  console.hxx  hcomboboxcontrol.c  hcomboboxcontrol.cxx  hcomboboxcontrol.h  hcomboboxcontrol.hxx  hcomboboxwidget.cxx  hcomboboxwidget.hxx  hconsole.c  hconsole.cxx  hconsole.h  hconsole.hxx  hcontrol.c  hcontrol.cxx  hcontrol.h  hcontrol.hxx  hcontrollist.c  hcontrollist.cxx  hcontrollist.h  hcontrollist.hxx  hdatecontrol.cxx  hdatecontrol.hxx  hdatewidget.cxx  hdatewidget.hxx  heditcontrol.c  heditcontrol.cxx  heditcontrol.h  heditcontrol.hxx  heditwidget.cxx  heditwidget.hxx  hevent.cxx  hevent.hxx  hhandler.c  hhandler.cxx  hhandler.h  (+91 more)
hcore/: algorithm.hxx  algorithm_impl.hxx  algorithm_low.hxx  allocator.cxx  allocator.hxx  assert.cxx  assert.hxx  base.cxx  base.h  base.hxx  bit.hxx  bitmaskenum.hxx  bound.hxx  cl_switch.c  cl_switch.cxx  cl_switch.h  cl_switch.hxx  compat.cxx  compat.h  compat.hxx  duration.cxx  duration.hxx  foreach.hxx  functional.hxx  harray.c  harray.cxx  harray.h  harray.hxx  hash.cxx  hash.hxx  hauxiliarybuffer.cxx  hauxiliarybuffer.hxx  hbitflag.cxx  hbitflag.hxx  hbitset.cxx  hbitset.hxx  hboundcall.cxx  hboundcall.hxx  hbtree.c  hbtree.cxx  (+233 more)
hdata/: hdata.cxx  hdata.h  hdata.hxx  hdatacomboboxwidget.cxx  hdatacomboboxwidget.hxx  hdatacontrol.c  hdatacontrol.cxx  hdatacontrol.h  hdatacontrol.hxx  hdatadatewidget.cxx  hdatadatewidget.hxx  hdataeditcontrol.c  hdataeditcontrol.cxx  hdataeditcontrol.h  hdataeditcontrol.hxx  hdataeditwidget.cxx  hdataeditwidget.hxx  hdatalistcontrol.c  hdatalistcontrol.cxx  hdatalistcontrol.h  hdatalistcontrol.hxx  hdatalistwidget.cxx  hdatalistwidget.hxx  hdataprocess.c  hdataprocess.cxx  hdataprocess.h  hdataprocess.hxx  hdatastatusbarcontrol.c  hdatastatusbarcontrol.cxx  hdatastatusbarcontrol.h  hdatastatusbarcontrol.hxx  hdatastatusbarwidget.cxx  hdatastatusbarwidget.hxx  hdatatreecontrol.c  hdatatreecontrol.cxx  hdatatreecontrol.h  hdatatreecontrol.hxx  hdatawidget.cxx  (+13 more)
(+370 files in other folders)
